--- a/roles/gitea-ocp/templates/deployment.yaml.j2
+++ b/roles/gitea-ocp/templates/deployment.yaml.j2
@@ -55,17 +55,31 @@ spec:
           mountPath: /gitea-repositories
         - name: gitea-config
           mountPath: /home/gitea/conf
-{% if _gitea_extra_volumes | length > 0 %}
-{% for vol in _gitea_extra_volumes %}
-        - name: "{{ vol.name }}"
-          mountPath: "{{ vol.mountPath }}"
-{% if vol.readOnly is defined %}
-          readOnly: {{ vol.readOnly }}
+{% if cluster_root_ca is defined %}
+        - mountPath: /etc/pki/ca-trust/extracted/pem
+          name: {{ cluster_root_ca }}
+          readOnly: true
 {% endif %}
-{% endfor %}
-{% endif %}
-{% if _gitea_env_vars | length > 0 %}
+{% if (_gitea_env_vars | length > 0) or (http_proxy is defined) or (https_proxy is defined) or (no_proxy is defined) %}
         env:
+{% if http_proxy is defined %}
+        - name: http_proxy
+          value: "{{ http_proxy }}"
+        - name: HTTP_PROXY
+          value: "{{ http_proxy }}"
+{% endif %}
+{% if https_proxy is defined %}
+        - name: https_proxy
+          value: "{{ https_proxy }}"
+        - name: HTTPS_PROXY
+          value: "{{ https_proxy }}"
+{% endif %}
+{% if no_proxy is defined %}
+        - name: no_proxy
+          value: "{{ no_proxy }}"
+        - name: NO_PROXY
+          value: "{{ no_proxy }}"
+{% endif %}
 {% for env in _gitea_env_vars %}
         - name: "{{ env.name }}"
           value: "{{ env.value }}"
@@ -81,20 +95,11 @@ spec:
           items:
             - key: app.ini
               path: app.ini
-{% if _gitea_extra_volumes | length > 0 %}
-{% for vol in _gitea_extra_volumes %}
-      - name: "{{ vol.name }}"
-        {{ vol.type }}:
-          {{ 'secretName' if vol.type == 'secret' else 'name' }}: "{{ vol.targetName }}"
-{% if vol.mountItems | length > 0 %}
+{% if cluster_root_ca is defined %}
+      - name: {{ cluster_root_ca }}
+        configMap:
           items:
-{% for mount in vol.mountItems %}
-          - key: "{{ mount.key }}"
-            path: "{{ mount.path }}"
-{% endfor %}
-{% endif %}
-{% if vol.defaultMode is defined %}
-          defaultMode: {{ vol.defaultMode }}
-{% endif %}
-{% endfor %}
+            - key: ca-bundle.crt
+              path: tls-ca-bundle.pem
+          name: {{ cluster_root_ca }}
 {% endif %}
